OpenVPN cluster IP.

--- a/releases/openvpn.yaml
+++ b/releases/openvpn.yaml
@@ -13,7 +13,7 @@ spec:
   releaseName: openvpn
   values:
     service:
-      type: NodePort
+      type: ClusterIP
       externalPort: 32100
       internalPort: 32100
       hostPort: 32100
