--- a/releases/openebs.yaml
+++ b/releases/openebs.yaml
@@ -13,12 +13,12 @@ spec:
     localprovisioner:
       basePath: /var/openebs/local
     snapshotOperator:
-      enabled: false
+      enabled: true
     ndm:
-      enabled: false
+      enabled: true
     ndmOperator:
-      enabled: false
+      enabled: true
     analytics:
-      enabled: false
+      enabled: true
     crd:
-      enableInstall: false
+      enableInstall: true
